unpackaged/main/default/objects/Contact/fields/Account_Credit__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit__c</fullName>
    <formula>Account.Net_30__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Credit</label>
    <type>Checkbox</type>
</CustomField>