unpackaged/main/default/objects/Contact/fields/AccountBusinessName__c.field-meta.xml
<CustomField>
    <fullName>AccountBusinessName__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountBusiness Name</label>
    <type>Text</type>
</CustomField>