unpackaged/main/default/objects/Contact/fields/AccountCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>AccountCreditLimit__c</fullName>
    <formula>TEXT (Account.Credit_Limit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Credit Limit</label>
    <type>Text</type>
</CustomField>