unpackaged/main/default/objects/Contact/fields/AccountRanking__c.field-meta.xml
<CustomField>
    <fullName>AccountRanking__c</fullName>
    <formula>Account.Ranking__c</formula>
    <label>Account Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>