unpackaged/main/default/objects/Contact/fields/Acknowledgment_Email__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Email__c</fullName>
    <label>Acknowledgment Email</label>
    <type>Email</type>
</CustomField>