unpackaged/main/default/objects/Contact/fields/Add_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Add_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Relationship</label>
    <type>Checkbox</type>
</CustomField>