unpackaged/main/default/objects/Contact/fields/Billing_Contact_Set__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Set__c</fullName>
    <formula>Account.Billing_Contact_ID__r.Id = Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Set</label>
    <type>Checkbox</type>
</CustomField>