unpackaged/main/default/objects/Contact/fields/Central_Ext__c.field-meta.xml
<CustomField>
    <fullName>Central_Ext__c</fullName>
    <label>Central Ext</label>
    <length>20</length>
    <type>Text</type>
</CustomField>