unpackaged/main/default/objects/Contact/fields/Central_Phone__c.field-meta.xml
<CustomField>
    <fullName>Central_Phone__c</fullName>
    <formula>IF( 
ISBLANK(Account.Phone ), 
NULL, 
&quot;(&quot;&amp; 
MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Account.Phone , &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),1,3)&amp; 
&quot;) &quot;&amp; 
MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Account.Phone , &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),4,3)&amp; 
&quot;-&quot;&amp; 
MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Account.Phone , &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),7,4) 
)</formula>
    <inlineHelpText>Account Phone</inlineHelpText>
    <label>Central Phone</label>
    <type>Text</type>
</CustomField>