unpackaged/main/default/objects/Contact/fields/Confirmed_by_Contact__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_by_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used when the contact confirms this is a contact they would like to keep if there are multiple ones on an account. TSF-65</description>
    <inlineHelpText>Contact confirmed to keep this contact if there are multiple on account.</inlineHelpText>
    <label>Confirmed by Contact</label>
    <type>Checkbox</type>
</CustomField>