unpackaged/main/default/objects/Contact/fields/CreatedDateandTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateandTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date and Time</label>
    <type>DateTime</type>
</CustomField>