unpackaged/main/default/objects/Contact/fields/Customer_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Customer_Flagged__c</fullName>
    <description>If &quot;Flag Customer&quot; is checked, a Flag image will display on record.</description>
    <formula>IF( Flag_Customer__c = TRUE,IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0686A000006R7kI&amp;operationContext=CHATTER&amp;contentId=05T6A00000M7ND5&quot;, &quot;&quot;, 15, 15),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Flagged</label>
    <type>Text</type>
</CustomField>