unpackaged/main/default/objects/Contact/fields/Date_Confirmed_by_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_Confirmed_by_Contact__c</fullName>
    <description>This field will be used when the contact confirms this is a contact they would like to keep if there are multiple ones on an account. TSF-65</description>
    <inlineHelpText>Date contact confirmed.</inlineHelpText>
    <label>Date Confirmed by Contact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>