unpackaged/main/default/objects/Contact/fields/Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Verified__c</fullName>
    <label>Date Verified</label>
    <type>Date</type>
</CustomField>