unpackaged/main/default/objects/Contact/fields/Date_Verified_New__c.field-meta.xml
<CustomField>
    <fullName>Date_Verified_New__c</fullName>
    <description>Shows Last Modified Date/time of the Contact</description>
    <formula>LastModifiedDate -  (5/24)</formula>
    <label>Date Verified</label>
    <type>Date</type>
</CustomField>