unpackaged/main/default/objects/Contact/fields/Direct_Ext__c.field-meta.xml
<CustomField>
    <fullName>Direct_Ext__c</fullName>
    <label>Direct Ext</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>