unpackaged/main/default/objects/Contact/fields/DirectAccountCreditStatus__c.field-meta.xml
<CustomField>
    <fullName>DirectAccountCreditStatus__c</fullName>
    <formula>TEXT (Account.Credit_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Account Credit Status</label>
    <type>Text</type>
</CustomField>