unpackaged/main/default/objects/Contact/fields/Flag_Customer__c.field-meta.xml
<CustomField>
    <fullName>Flag_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag Contact</description>
    <inlineHelpText>Check if caller may potentially be doing something dangerous. This will set a flag on the Account, Contact, and Case level for future calls.</inlineHelpText>
    <label>Flag Customer</label>
    <type>Checkbox</type>
</CustomField>