unpackaged/main/default/objects/Contact/fields/Flag_Reason__c.field-meta.xml
<CustomField>
    <fullName>Flag_Reason__c</fullName>
    <description>Reason for flagging Customer.</description>
    <label>Flag Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abusive Language</fullName>
            </value>
            <value>
                <fullName>Argumentative</fullName>
            </value>
            <value>
                <fullName>Refuses to Test</fullName>
            </value>
            <value>
                <fullName>Dangerous or Unintended use</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
            <value>
                <fullName>Difficult Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>