unpackaged/main/default/objects/Contact/fields/Forward_to_Teamer__c.field-meta.xml
<CustomField>
    <fullName>Forward_to_Teamer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Teamer should forward call or case from this Contact to the Teamer indicated in this field</description>
    <inlineHelpText>Teamer should forward call or case from this Contact to the Teamer indicated in this field</inlineHelpText>
    <label>Forward to Teamer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>