unpackaged/main/default/objects/Contact/fields/HasOptedOutOfTechSurvey__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfTechSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer has Opted out of receiving Tech Survey from CAse</description>
    <label>Tech Survey Opt Out</label>
    <type>Checkbox</type>
</CustomField>