unpackaged/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates if the Contact is longer a valid customer.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>