unpackaged/main/default/objects/Contact/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <description>Inactive reason for Contact</description>
    <inlineHelpText>Reasons Contact is Inactive</inlineHelpText>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Left Industry</fullName>
            </value>
            <value>
                <fullName>Left the Company</fullName>
            </value>
            <value>
                <fullName>Inactivated by Webstore Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>