unpackaged/main/default/objects/Contact/fields/Incoming_Phone__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Phone__c</fullName>
    <label>Incoming Phone</label>
    <type>Phone</type>
</CustomField>