unpackaged/main/default/objects/Contact/fields/Net_30__c.field-meta.xml
<CustomField>
    <fullName>Net_30__c</fullName>
    <formula>Account.Net_30__c</formula>
    <label>Net 30</label>
    <type>Checkbox</type>
</CustomField>