unpackaged/main/default/objects/Contact/fields/NPS_Label__c.field-meta.xml
<CustomField>
    <fullName>NPS_Label__c</fullName>
    <label>NPS Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>