unpackaged/main/default/objects/Contact/fields/NPS_Response__c.field-meta.xml
<CustomField>
    <fullName>NPS_Response__c</fullName>
    <description>Lastest NPS Response</description>
    <label>NPS Response</label>
    <length>50</length>
    <type>Text</type>
</CustomField>