unpackaged/main/default/objects/Contact/fields/Number_of_Call_ins__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Call_ins__c</fullName>
    <label>Number of Call-ins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>