unpackaged/main/default/objects/Contact/fields/Preferred_Callback_Number__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Callback_Number__c</fullName>
    <label>Preferred Callback #</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Phone</fullName>
            </value>
            <value>
                <fullName>Phone/Mobile</fullName>
            </value>
            <value>
                <fullName>Incoming Phone</fullName>
            </value>
            <value>
                <fullName>Central/Account Phone</fullName>
                <isActive>false</isActive>
                <label>Central/Account Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>