unpackaged/main/default/objects/Contact/fields/Previous_Account__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account__c</fullName>
    <label>Previous Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>