unpackaged/main/default/objects/Contact/fields/Stop_Case_Auto_Reply_Email__c.field-meta.xml
<CustomField>
    <fullName>Stop_Case_Auto_Reply_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Case Auto Reply Email</label>
    <type>Checkbox</type>
</CustomField>