unpackaged/main/default/objects/Contact/fields/Teamer_Extension__c.field-meta.xml
<CustomField>
    <fullName>Teamer_Extension__c</fullName>
    <formula>Forward_to_Teamer__r.Extension</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teamer Extension</label>
    <type>Text</type>
</CustomField>