unpackaged/main/default/objects/Contact/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>HYPERLINK($Label.Online_Credit_Application_URL&amp;Id&amp;&quot;&amp;Name=&quot;&amp;SUBSTITUTE(SUBSTITUTE(Account.Name, &quot; &quot;, &quot;%20&quot;),&quot;&amp;&quot;,&quot;%26&quot;)  &amp;&quot;&amp;CustomerID=&quot;&amp;Account.CID__c&amp;&quot;&amp;FirstName=&quot;&amp;FirstName&amp;&quot;&amp;LastName=&quot;&amp;LastName&amp;&quot;&amp;Email=&quot;&amp;Email, &quot;Credit Application Form&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>