unpackaged/main/default/objects/Contact/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box when contact information has been verified within 6 months.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>