unpackaged/main/default/objects/Contact/fields/Web_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_ID__c</fullName>
    <description>Web ID</description>
    <externalId>true</externalId>
    <label>Web ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>