unpackaged/main/default/objects/Contact/validationRules/Cannot_edit_Inactive_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_Inactive_Contact</fullName>
    <active>true</active>
    <description>Cannot edit Inactive Contact</description>
    <errorConditionFormula>AND(NOT(ISNEW()), NOT(ISCHANGED(Inactive__c)), Inactive__c = TRUE, NOT($Permission.Merge_Inactivate_Accounts),
$User.Id=&quot;0056A000002soezQAA&quot;)</errorConditionFormula>
    <errorMessage>Inactive Contacts cannot be edited.</errorMessage>
</ValidationRule>