unpackaged/main/default/objects/Contact/validationRules/Cannot_Update_Dummy_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Dummy_Contact</fullName>
    <active>true</active>
    <description>Cannot update Quick Call Contact</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &#39;System Administrator&#39;, Id = &#39;0033u00000zBscL&#39;)</errorConditionFormula>
    <errorMessage>This is a placeholder contact and should not be updated.</errorMessage>
</ValidationRule>