unpackaged/main/default/objects/Contact/validationRules/Direct_or_Mobile_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_or_Mobile_Phone_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(CreatedBy.Profile.Name = &quot;Community Profile&quot;),
ISBLANK(Direct_Phone__c), ISBLANK(MobilePhone),
Not($Permission.Merge_Inactivate_Accounts),
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($Profile.Name = &quot;Integration API&quot;))</errorConditionFormula>
    <errorMessage>Please enter a Direct or Phone(Mobile) Number.</errorMessage>
</ValidationRule>