unpackaged/main/default/objects/Contact/validationRules/Email_Opt_Out_Is_Checked_No_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Opt_Out_Is_Checked_No_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(HasOptedOutOfEmail== TRUE,
 Verified__c  ,True,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;API Only&quot;,
$Profile.Name &lt;&gt; &quot;Integration API&quot;)</errorConditionFormula>
    <errorMessage>If Email Opt Out Is Checked, No Need To Verify</errorMessage>
</ValidationRule>