unpackaged/main/default/objects/Contact/validationRules/First_Name_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IsBlank(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is Required.</errorMessage>
</ValidationRule>