unpackaged/main/default/objects/Contact/validationRules/Inactive_Reason_cannot_be_blank_if_Inact.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Reason_cannot_be_blank_if_Inact</fullName>
    <active>true</active>
    <description>Force to pick an inactive Reason for Contact</description>
    <errorConditionFormula>AND(Inactive__c = TRUE,  ISPICKVAL(Inactive_Reason__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Inactive_Reason__c</errorDisplayField>
    <errorMessage>Please select an inactive reason</errorMessage>
</ValidationRule>