unpackaged/main/default/objects/Contact/validationRules/IncomingPhone_should_have_numbers_only.validationRule-meta.xml
<ValidationRule>
    <fullName>IncomingPhone_should_have_numbers_only</fullName>
    <active>true</active>
    <description>The phone fields should contain numbers only.  Preventing users from copying pasting email address into phone</description>
    <errorConditionFormula>AND(NOT(ISBLANK(  Incoming_Phone__c )), NOT(ISNUMBER(Incoming_Phone__c )),
NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>Incoming_Phone__c</errorDisplayField>
    <errorMessage>Please enter numbers only for phone.</errorMessage>
</ValidationRule>