unpackaged/main/default/objects/Contact/validationRules/Phone_should_have_numbers_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_should_have_numbers_only</fullName>
    <active>true</active>
    <description>The phone fields should contain numbers only.  Preventing users from copying pasting email address into phone</description>
    <errorConditionFormula>AND(NOT(ISBLANK( MobilePhone )), 
NOT(ISNUMBER(MobilePhone )),
NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please enter numbers only for phone.</errorMessage>
</ValidationRule>