unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>Account_Number__c</columns>
    <columns>P21_ID__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ACCOUNT_NUMBER</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>All Contacts</label>
</ListView>